[tool.poetry]
name = "test-webapp"
version = "0.1.0"
description = ""
authors = ["nikita.sergievsky <nikita.sergievsky@raftds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.16.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
